// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComparisonTreeNode ComparisonDetailDrawer should render the drawer when open is true 1`] = `
<body>
  <div />
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 920px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  查看对比详情
                </div>
              </div>
              <div
                class="ant-drawer-extra"
              />
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="css-17ndm04"
                  >
                    <h4
                      class="ant-typography"
                    >
                      建表语句差异
                    </h4>
                    <div
                      class="css-2xzyis"
                    >
                      <div
                        class="subtitle-item-wrapper"
                      >
                        <svg
                          color="#4583ff"
                          height="16"
                          viewBox="0 0 18 18"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M15.75 7.125v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375v-2.25C2.25 8.989 5.273 10.5 9 10.5s6.75-1.511 6.75-3.375m-13.5 3.75c0 1.864 3.023 3.375 6.75 3.375s6.75-1.511 6.75-3.375v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375zM9 9C5.273 9 2.25 7.489 2.25 5.625S5.273 2.25 9 2.25s6.75 1.511 6.75 3.375S12.727 9 9 9"
                            fill="currentColor"
                          />
                        </svg>
                        <span
                          class="ant-typography subtitle-item-text"
                        >
                          baseline-name.test3
                        </span>
                      </div>
                      <div
                        class="subtitle-item-wrapper"
                      >
                        <svg
                          color="#4583ff"
                          height="16"
                          viewBox="0 0 18 18"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M15.75 7.125v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375v-2.25C2.25 8.989 5.273 10.5 9 10.5s6.75-1.511 6.75-3.375m-13.5 3.75c0 1.864 3.023 3.375 6.75 3.375s6.75-1.511 6.75-3.375v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375zM9 9C5.273 9 2.25 7.489 2.25 5.625S5.273 2.25 9 2.25s6.75 1.511 6.75 3.375S12.727 9 9 9"
                            fill="currentColor"
                          />
                        </svg>
                        <span
                          class="ant-typography subtitle-item-text"
                        >
                          comparison-name.test3
                        </span>
                      </div>
                    </div>
                    <div
                      class="actiontech-diff-sql-view-only-editor-renderer-wrapper custom-diff-monaco-editor css-1esok7i"
                    >
                      <input
                        height="400"
                        language="sql"
                        options="{"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14,"scrollBeyondLastLine":false,"lineHeight":24,"letterSpacing":0.8,"overviewRulerBorder":false,"wordWrap":"on","wrappingStrategy":"advanced","wrappingIndent":"indent","scrollbar":{"vertical":"visible","horizontal":"visible","useShadows":false,"verticalScrollbarSize":12,"horizontalScrollbarSize":12},"folding":false,"lineNumbers":"on","glyphMargin":false,"lineDecorationsWidth":50,"renderValidationDecorations":"on","guides":{"indentation":true,"highlightActiveIndentation":true},"renderOverviewRuler":false,"readOnly":true}"
                        theme="editorCustomTheme"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-footer"
            />
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`ComparisonTreeNode ComparisonDetailDrawer should render the drawer when open is true 2`] = `
<body>
  <div />
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 920px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  查看对比详情
                </div>
              </div>
              <div
                class="ant-drawer-extra"
              >
                <button
                  class="ant-btn ant-btn-primary basic-button-wrapper css-geipcv"
                  type="button"
                >
                  <span>
                    生成变更SQL
                  </span>
                </button>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="css-17ndm04"
                  >
                    <h4
                      class="ant-typography"
                    >
                      建表语句差异
                    </h4>
                    <div
                      class="css-2xzyis"
                    >
                      <div
                        class="subtitle-item-wrapper"
                      >
                        <svg
                          color="#4583ff"
                          height="16"
                          viewBox="0 0 18 18"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M15.75 7.125v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375v-2.25C2.25 8.989 5.273 10.5 9 10.5s6.75-1.511 6.75-3.375m-13.5 3.75c0 1.864 3.023 3.375 6.75 3.375s6.75-1.511 6.75-3.375v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375zM9 9C5.273 9 2.25 7.489 2.25 5.625S5.273 2.25 9 2.25s6.75 1.511 6.75 3.375S12.727 9 9 9"
                            fill="currentColor"
                          />
                        </svg>
                        <span
                          class="ant-typography subtitle-item-text"
                        >
                          baseline-name.test3
                        </span>
                      </div>
                      <div
                        class="subtitle-item-wrapper"
                      >
                        <svg
                          color="#4583ff"
                          height="16"
                          viewBox="0 0 18 18"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M15.75 7.125v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375v-2.25C2.25 8.989 5.273 10.5 9 10.5s6.75-1.511 6.75-3.375m-13.5 3.75c0 1.864 3.023 3.375 6.75 3.375s6.75-1.511 6.75-3.375v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375zM9 9C5.273 9 2.25 7.489 2.25 5.625S5.273 2.25 9 2.25s6.75 1.511 6.75 3.375S12.727 9 9 9"
                            fill="currentColor"
                          />
                        </svg>
                        <span
                          class="ant-typography subtitle-item-text"
                        >
                          comparison-name.test3
                        </span>
                      </div>
                    </div>
                    <div
                      class="actiontech-diff-sql-view-only-editor-renderer-wrapper custom-diff-monaco-editor css-1esok7i"
                    >
                      <input
                        height="400"
                        language="sql"
                        options="{"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14,"scrollBeyondLastLine":false,"lineHeight":24,"letterSpacing":0.8,"overviewRulerBorder":false,"wordWrap":"on","wrappingStrategy":"advanced","wrappingIndent":"indent","scrollbar":{"vertical":"visible","horizontal":"visible","useShadows":false,"verticalScrollbarSize":12,"horizontalScrollbarSize":12},"folding":false,"lineNumbers":"on","glyphMargin":false,"lineDecorationsWidth":50,"renderValidationDecorations":"on","guides":{"indentation":true,"highlightActiveIndentation":true},"renderOverviewRuler":false,"readOnly":true}"
                        theme="editorCustomTheme"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="ant-collapse ant-collapse-icon-position-start css-vh3t0y"
                  >
                    <div
                      class="ant-collapse-item"
                    >
                      <div
                        aria-disabled="false"
                        aria-expanded="false"
                        class="ant-collapse-header"
                        role="button"
                        tabindex="0"
                      >
                        <div
                          class="ant-collapse-expand-icon"
                        >
                          <span
                            aria-label="right"
                            class="anticon anticon-right ant-collapse-arrow"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="right"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                              />
                            </svg>
                          </span>
                        </div>
                        <span
                          class="ant-collapse-header-text"
                        >
                          基准环境建表语句审核结果
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-footer"
            />
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`ComparisonTreeNode ComparisonTreeNode should render the baseline and comparison trees 1`] = `
[
  "TREE_PARENT_NODE_KEY",
  "0",
  "1",
  "2",
  "0_TREE_NODE_KEY_SEPARATOR_TABLE",
]
`;

exports[`ComparisonTreeNode ComparisonTreeNode should render the baseline and comparison trees 2`] = `
<div>
  <div
    class="css-ov1ktg"
  >
    <div
      class="ant-card ant-card-hoverable css-1qxznty"
    >
      <div
        class="ant-card-head"
      >
        <div
          class="ant-card-head-wrapper"
        >
          <div
            class="ant-card-head-title"
          >
            <div
              class="css-1kpyopg"
            >
              <span>
                基准环境
              </span>
              <span>
                (baseline-name) 
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-card-body"
      >
        <div
          class="ant-tree ant-tree-icon-hide ant-tree-unselectable ant-tree-show-line"
          role="tree"
        >
          <div>
            <input
              aria-label="for screen reader"
              style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
              tabindex="0"
              value=""
            />
          </div>
          <div
            aria-hidden="true"
            class="ant-tree-treenode"
            style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
          >
            <div
              class="ant-tree-indent"
            >
              <div
                class="ant-tree-indent-unit"
              />
            </div>
          </div>
          <div
            class="ant-tree-list"
            style="position: relative;"
          >
            <div
              class="ant-tree-list-holder"
              style="max-height: 1200px; overflow-y: hidden;"
            >
              <div>
                <div
                  class="ant-tree-list-holder-inner"
                  style="display: flex; flex-direction: column;"
                >
                  <div
                    aria-grabbed="false"
                    class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="ant-tree-indent"
                    />
                    <span
                      class="ant-tree-switcher ant-tree-switcher_close"
                    >
                      <svg
                        class="ant-tree-switcher-icon"
                        height="16"
                        viewBox="0 0 14 14"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M7.684 7 4.796 4.112l.825-.824L9.334 7 5.62 10.712l-.825-.825z"
                        />
                      </svg>
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
                      title=""
                    >
                      <span
                        class="ant-tree-title"
                      >
                        <div
                          class="css-1bi0c9x"
                        >
                          <svg
                            color="#4583ff"
                            height="16"
                            viewBox="0 0 18 18"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M15.75 7.125v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375v-2.25C2.25 8.989 5.273 10.5 9 10.5s6.75-1.511 6.75-3.375m-13.5 3.75c0 1.864 3.023 3.375 6.75 3.375s6.75-1.511 6.75-3.375v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375zM9 9C5.273 9 2.25 7.489 2.25 5.625S5.273 2.25 9 2.25s6.75 1.511 6.75 3.375S12.727 9 9 9"
                              fill="currentColor"
                            />
                          </svg>
                          <span
                            class="content"
                          >
                            baseline-name
                          </span>
                        </div>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-card ant-card-hoverable css-1qxznty"
    >
      <div
        class="ant-card-head"
      >
        <div
          class="ant-card-head-wrapper"
        >
          <div
            class="ant-card-head-title"
          >
            <div
              class="css-1kpyopg"
            >
              <span>
                比对环境
              </span>
              <span>
                (comparison-name)
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-card-body"
      >
        <div
          class="ant-tree ant-tree-icon-hide ant-tree-unselectable ant-tree-show-line"
          role="tree"
        >
          <div>
            <input
              aria-label="for screen reader"
              style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
              tabindex="0"
              value=""
            />
          </div>
          <div
            aria-hidden="true"
            class="ant-tree-treenode"
            style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
          >
            <div
              class="ant-tree-indent"
            >
              <div
                class="ant-tree-indent-unit"
              />
            </div>
          </div>
          <div
            class="ant-tree-list"
            style="position: relative;"
          >
            <div
              class="ant-tree-list-holder"
              style="max-height: 1200px; overflow-y: hidden;"
            >
              <div>
                <div
                  class="ant-tree-list-holder-inner"
                  style="display: flex; flex-direction: column;"
                >
                  <div
                    aria-grabbed="false"
                    class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
                    draggable="false"
                  >
                    <span
                      aria-hidden="true"
                      class="ant-tree-indent"
                    />
                    <span
                      class="ant-tree-switcher ant-tree-switcher_close"
                    >
                      <svg
                        class="ant-tree-switcher-icon"
                        height="16"
                        viewBox="0 0 14 14"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M7.684 7 4.796 4.112l.825-.824L9.334 7 5.62 10.712l-.825-.825z"
                        />
                      </svg>
                    </span>
                    <span
                      class="ant-tree-checkbox"
                    >
                      <span
                        class="ant-tree-checkbox-inner"
                      />
                    </span>
                    <span
                      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
                      title=""
                    >
                      <span
                        class="ant-tree-title"
                      >
                        <div
                          class="css-1bi0c9x"
                        >
                          <svg
                            color="#4583ff"
                            height="16"
                            viewBox="0 0 18 18"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M15.75 7.125v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375v-2.25C2.25 8.989 5.273 10.5 9 10.5s6.75-1.511 6.75-3.375m-13.5 3.75c0 1.864 3.023 3.375 6.75 3.375s6.75-1.511 6.75-3.375v2.25c0 1.864-3.023 3.375-6.75 3.375s-6.75-1.511-6.75-3.375zM9 9C5.273 9 2.25 7.489 2.25 5.625S5.273 2.25 9 2.25s6.75 1.511 6.75 3.375S12.727 9 9 9"
                              fill="currentColor"
                            />
                          </svg>
                          <span
                            class="content"
                          >
                            comparison-name
                          </span>
                        </div>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
